# ai-log

./: .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  install.sh  justfile  rustfmt.toml
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
agent_docs/: design.md  overall_layout.html  rust-reimpl-analysis.md  rust-spec-v0.1.md  rust-tasks-v0.1.md  session-page-improvements-v2-plan.md  session-page-improvements-v2-spec.md  session-page-improvements-v2-tasks.md  session-page-improvements-v3-plan.md  session-page-improvements-v3-spec.md  session-page-improvements-v3-tasks.md  side_by_side_diff_view_variant.html  thinking_block_variants.html  tool_call_block_variants.html  ui-improvements-tasks-v0.1.md  ui-restructure-spec-v0.1.md  ui-restructure-tasks-v0.1.md  user_message_card_variants.html  weavr-bench-results.md  weavr-release-hardening-plan.md  weavr-release-hardening-spec.md  weavr-release-hardening-tasks.md  weavr-review-findings.md
assets/: index.js  tailwind.config.js  tailwind.input.css  transcript.js
scripts/: bench.sh  update-brew-formula.sh
src/: aggregate.rs  assets.rs  cache.rs  cli.rs  conversation.rs  dates.rs  lib.rs  main.rs  parser.rs  project.rs  session.rs  update.rs
src/model/: content.rs  entry.rs  mod.rs  tool.rs
src/render/: diff.rs  highlight.rs  html.rs  index.rs  markdown.rs  markdown_export.rs  mod.rs  pagination.rs  project.rs  turn.rs
src/render/tools/: mod.rs
templates/: base.html  index.html  project.html  transcript.html
templates/components/: assistant_message.html  diff.html  header.html  status_bar.html  theme_toggle.html  thinking.html  tool_card.html  toolbar.html  user_message.html
templates/components/sidebar/: file_explorer.html  session_history.html  sidebar.html  toc.html  tool_usage.html
tests/: cli.rs  self_containment.rs
tests/fixtures/: 08022288-1289-4f52-bdb6-7f9f0902f2a5.jsonl  6162c547-d1ce-459b-957e-e787df7a4756.jsonl  b4d9d192-fecb-4675-8076-634a63192f60.jsonl  e1c03f98-9e3b-4e9e-85ec-004b0363c45c.jsonl  entry_assistant.jsonl  entry_summary.jsonl  entry_system.jsonl  entry_unknown.jsonl  entry_user.jsonl  session-6162c547-d1ce-459b-957e-e787df7a4756.html  session_linear.jsonl
