[package]
name = "cclog"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.80"
description = "Claude Code transcript exporter — beautiful, self-contained HTML and Markdown"
license = "MIT"
repository = "https://github.com/deepakdewani1/cclog"

[dependencies]
# Phase 1+: serde, serde_json, clap, askama, comrak, syntect, similar, rusqlite, etc.
# Added incrementally as each phase is implemented.

[dev-dependencies]
