[package]
name = "cclog"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.80"
description = "Claude Code transcript exporter — beautiful, self-contained HTML and Markdown"
license = "MIT"
repository = "https://github.com/deepakdewani1/cclog"

[dependencies]
# Phase 1: Data layer
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# Phase 2: Templates
askama = "0.12"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Phase 3: Rendering
comrak = { version = "0.24", default-features = false, features = ["shortcodes"] }
syntect = { version = "5", default-features = false, features = ["default-fancy", "parsing", "html", "regex-fancy"] }
similar = "2"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
insta = "1"
assert_cmd = "2"
predicates = "3"
