[package]
name = "weavr"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "Claude Code transcript exporter — beautiful, self-contained HTML and Markdown"
license = "MIT"
repository = "https://github.com/deepakkumardewani/weavr"
readme = "README.md"
keywords = ["claude-code", "transcript", "exporter", "html", "markdown"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
homepage = "https://github.com/deepakkumardewani/weavr"
# Keep the published crate lean — ship only what's needed to build + run.
# Everything below is dev/internal tooling not required by crate consumers.
exclude = [
    "agent_docs/",
    "tests/",
    "screenshots/",
    "scripts/",
    ".github/",
    "justfile",
    "install.sh",
    "clippy.toml",
    "rustfmt.toml",
    "CLAUDE.md",
    ".impeccable.md",
]

[dependencies]
# Phase 1: Data layer
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# Phase 2: Templates
askama = "0.12"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Phase 3: Rendering
comrak = { version = "0.24", default-features = false, features = ["shortcodes"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
syntect = { version = "5", default-features = false, features = ["default-fancy", "parsing", "html", "regex-fancy"] }
similar = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
self_update = "0.42"

[dev-dependencies]
insta = "1"
assert_cmd = "2"
predicates = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-dist configuration — binary releases for macOS + Linux
[workspace]
members = ["."]

[workspace.metadata.dist]
# Target platforms
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# CI backend
ci = "github"
# Installers to generate
installers = ["shell", "powershell", "homebrew"]

[package.metadata.dist]
dist = true

# cargo-binstall metadata — enables `cargo binstall weavr`
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/weavr-{ target }{ archive-suffix }"
bin-dir = "weavr/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
